[Release 21.1.42] 修正过时并弃用的 API Call